# jigit

./: .dir-locals.el  .gitignore  ChangeLog  Makefile  README  README.in  decompress.c  dump-jte.c  dump.c  endian.c  endian.h  extract-data.c  iso-image.pl  jd_interface.c  jig-base64.c  jig-base64.h  jigdb-db.c  jigdb-sql.c  jigdb.h  jigdo.h  jigdoofus.c  jigdump.1  jigdump.1.in  jigdump.c  jigit  jigit-mkimage.1  jigit-mkimage.1.in  jigit.1  jigsum-sha256.1  jigsum-sha256.1.in  jigsum-sha256.c  jigsum.1  jigsum.1.in  jigsum.c  jte.h  md5.c  md5.h  mkimage.c  mkjigsnap  mkjigsnap.8  (+8 more)
libjte/: .dir-locals.el  .gitignore  COPYRIGHT  ChangeLog  Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  bootstrap  checksum.c  configure  configure.ac  endian.c  jte.c  jte.h  libjte-2.pc.in  libjte.c  libjte.h  libjte.ver  md5.c  md5.h  rsync.c  sha1.c  sha256.c  sha512.c
libjte/doc/: API  NOTES  TODO  doxyfile  doxyfileall  genman  jigdo-gen-md5-list.inc
libjte/test/: demo.c
